// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chart component 1`] = `
<div
  className="status"
>
  <div
    className="amounts"
  >
    £ 
    0
    <span>
      Total sent
    </span>
  </div>
  <Doughnut
    data={
      Object {
        "datasets": Array [
          Object {
            "backgroundColor": Array [
              "#ffb427",
              "#cccccc",
            ],
            "data": Array [
              0,
              5000,
            ],
          },
        ],
        "labels": Array [
          "Total sent",
          "Left available",
        ],
      }
    }
    options={
      Object {
        "legend": Object {
          "display": false,
        },
        "responsive": false,
      }
    }
    width={180}
  />
  <div
    className="amounts"
  >
    £ 
    5,000
    <span>
      Left available
    </span>
  </div>
</div>
`;

exports[`Chart component 2`] = `
<div
  className="status"
>
  <div
    className="amounts"
  >
    £ 
    100
    <span>
      Total sent
    </span>
  </div>
  <Doughnut
    data={
      Object {
        "datasets": Array [
          Object {
            "backgroundColor": Array [
              "#ffb427",
              "#cccccc",
            ],
            "data": Array [
              100,
              4900,
            ],
          },
        ],
        "labels": Array [
          "Total sent",
          "Left available",
        ],
      }
    }
    options={
      Object {
        "legend": Object {
          "display": false,
        },
        "responsive": false,
      }
    }
    width={180}
  />
  <div
    className="amounts"
  >
    £ 
    4,900
    <span>
      Left available
    </span>
  </div>
</div>
`;
